# S3-FileUpload-UrlGen

./: LICENSE  README.md  pyproject.toml
src/fileUploadS3_x21182787/: uploadGenerateUrl.py
